<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Aan Huis</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <string name="login">Login</string>
    <string name="title_activity_prikbord">PrikbordActivity</string>
    <string name="location">Locatie:</string>
    <string name="status">Status:</string>
    <string name="deadline">Deadline:</string>
    <string name="description">Omschrijving:</string>
    <string name="tags">Tags:</string>
    <string name="available">Beschikbaar</string>
    <string name="unavailable">Niet beschikbaar</string>
    <string name="none">Niet aangegeven</string>
    <string name="when_availible">Wanneer ben je beschikbaar?</string>
    <string name="select_workarea">Selecteer Werkgebied</string>
    <string name="no">Nee</string>
    <string name="yes">Ja</string>
    <string name="continu">Verder</string>
    <string name="cancel">Annuleren</string>
    <string name="prikbord">Prikbord</string>
    <string name="settings">Instellingen</string>
    <string name="donate">Donatie</string>
    <string name="refresh">Refresh</string>
    <string name="current_date">Vandaag</string>
    <string name="no_prikbord_items_found">Geen prikbord items gevonden</string>
    <string name="prikbord_item">Prikbord Item</string>
    <string name="afspraak_details">Afspraak Details</string>
    <string name="aanmelden">Aanmelden</string>
    <string name="afmelden">Afmelden</string>
    <string name="distance">Afstand:</string>
    <string name="logout">Uitloggen</string>
    <string name="pending">Openstaand</string>
    <string name="denied">Afgewezen</string>
    <string name="accepted">Aangenomen</string>
    <string name="loon">Loon</string>
    <string name="customers">Klanten</string>
    <string name="calendar">Agenda</string>
    <string name="algemeen">Algemeen</string>
    <string name="klant">Klant:</string>
    <string name="pin">Pin:</string>
    <string name="klantnummer">Klantnummer:</string>
    <string name="adres">Adres:</string>
    <string name="verdiensten">Verdiensten:</string>
    <string name="telefoonnummer">Telefoon:</string>
    <string name="email">Email:</string>
    <string name="mogelijke_verdiensten">Mogelijke Verdiensten:</string>
    <string name="totaal_mogelijk_verdiensten">Totaal Mogelijke Verdiensten:</string>
    <string name="aantal_afspraken">Aantal Afspraken:</string>
    <string name="aantal_servicevragen">Aantal Servicevragen:</string>
    <string name="first_time_setup">Eerste keer initialiseren, dit kan even duren!</string>
    <string name="loading_werkgebied">Werkgebieden laden...</string>
    <string name="loading_prikbord">Prikbord items laden...</string>
    <string name="loading_loon">Loonlijst laden...</string>
    <string name="loading_kalender">Kalender laden...</string>

    <!-- Sentences -->
    <string name="sure_you_cant_do_appointment">Weet je zeker dat je deze afspraak niet kan doen?</string>
    <string name="error_no_connection">Er kon geen verbinding worden gemaakt met SAH3.net</string>
    <string name="sure_you_want_to_logout">Weet je zeker dat je wilt uitloggen?</string>

    <!-- Settings -->
    <string name="prikbord_refreshtime">Update Interval</string>
    <string name="prikbord_refreshtime_desc">Tijd tussen de checks voor nieuwe prikbord items</string>
    <string name="prikbord_refreshtime_default">7200</string>
    <string-array name="prikbord_refreshtime_entries">
        <item>30 Minuten</item>
        <item>2 Uur</item>
        <item>6 Uur</item>
        <item>12 Uur</item>
        <item>Niet</item>
    </string-array>
    <string-array name="prikbord_refreshtime_values">
        <item>1800</item>
        <item>7200</item>
        <item>21600</item>
        <item>43200</item>
        <item>-1</item>
    </string-array>

    <string name="prikbord_werkgebied">Werkgebied</string>
    <string name="prikbord_werkgebied_desc">Werkgebied voor afstand berekeningen</string>

    <string name="send_anon_data">Verstuur anonieme data</string>
    <string name="send_anon_data_desc">Verstuur anonieme data om de app te verbeteren</string>
    <string name="send_anon_data_default">true</string>

    <string name="loon_include_vat">Belasting aftrekken</string>
    <string name="loon_include_vat_desc">Toon loon minus 36.50% belasting. Handig als je geen loonheffings korting hebt. (LET OP: Loon kan een paar cent afwijken met wat SAH uitbetaald)</string>
    <string name="loon_include_vat_default">false</string>
    <string name="title_activity_vp">VP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
