<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prikbord"
        android:key="pref_key_storage_settings">
        <ListPreference
            android:key="prikbord_refreshtime"
            android:title="@string/prikbord_refreshtime"
            android:summary="@string/prikbord_refreshtime_desc"
            android:entries="@array/prikbord_refreshtime_entries"
            android:entryValues="@array/prikbord_refreshtime_values"
            android:defaultValue="@string/prikbord_refreshtime_default" />
        <ListPreference
            android:key="prikbord_werkgebied"
            android:title="@string/prikbord_werkgebied"
            android:summary="@string/prikbord_werkgebied_desc"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/loon"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="loon_include_vat"
            android:title="@string/loon_include_vat"
            android:summary="@string/loon_include_vat_desc"
            android:defaultValue="@string/loon_include_vat_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/algemeen"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="send_anon_data"
            android:title="@string/send_anon_data"
            android:summary="@string/send_anon_data_desc"
            android:defaultValue="@string/send_anon_data_default"/>
    </PreferenceCategory>
</PreferenceScreen>