<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="menuClick"
        android:tag="loon"
        android:id="@+id/menu_calendar">
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_margin="16sp"
            android:src="@drawable/icon_calendar"
            android:layout_marginRight="31sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:textColor="@color/black87"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="menuClick"
        android:tag="prikbord"
        android:id="@+id/menu_prikbord"
        android:background="@color/SAHlightblue">
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_margin="16sp"
            android:src="@drawable/icon_pin"
            android:layout_marginRight="31sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prikbord"
            android:textColor="@color/black87"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="menuClick"
        android:tag="loon"
        android:id="@+id/menu_loon">
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_margin="16sp"
            android:src="@drawable/icon_euro"
            android:layout_marginRight="31sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loon"
            android:textColor="@color/black87"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="menuClick"
        android:tag="loon"
        android:id="@+id/menu_customers">
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_margin="16sp"
            android:src="@drawable/icon_users"
            android:layout_marginRight="31sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customers"
            android:textColor="@color/black87"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="menuClick"
        android:id="@+id/menu_settings"
        android:tag="settings">
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_margin="16sp"
            android:src="@drawable/icon_cog"
            android:layout_marginRight="31sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black87"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="menuClick"
        android:tag="logout">
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_margin="16sp"
            android:src="@drawable/icon_logout"
            android:layout_marginRight="31sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/black87"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>