<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:gravity="center_vertical">
    <Space
        android:layout_width="35dp"
        android:layout_height="match_parent" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold"
                android:gravity="fill_horizontal"
                android:layout_weight="0.25"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:gravity="fill_horizontal"
                android:id="@+id/prikbord_status"
                android:layout_weight="0.75"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"
                android:gravity="fill_horizontal"
                android:layout_weight="0.25"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Locatie"
                android:gravity="fill_horizontal"
                android:id="@+id/prikbord_locatie"
                android:layout_weight="0.75"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textStyle="bold"
                android:gravity="fill_horizontal"
                android:layout_weight="0.25"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Computer, Windows 7, Virusscanner, APK/opschonen, Installeren software, Instellingen software, Opstartproblemen/afsluitproblemen/loopt vast PC, Virus verwijderen"
                android:gravity="fill_horizontal"
                android:id="@+id/prikbord_tags"
                android:layout_weight="0.75"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>