<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:id="@+id/kalender_item">
    <LinearLayout
        android:id="@+id/kalender_detail_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="8sp"
        android:paddingTop="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:shrinkColumns="2">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/klant"
                    android:textSize="14sp"
                    android:minWidth="100sp"
                    android:width="50sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_label_klant"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:gravity="fill_horizontal"
                    android:text="Klant"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_klant"/>
            </TableRow>

            <TableRow
                android:paddingTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/klantnummer"
                    android:textSize="14sp"
                    android:width="50sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_label_klantnummer"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="Klantnummer"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_klantnummer"/>
            </TableRow>

            <TableRow android:id="@+id/kalender_pin_row"
                android:paddingTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/pin"
                    android:textSize="14sp"
                    android:minWidth="100sp"
                    android:width="50sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_label_pin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="Pincode"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_pin"/>
            </TableRow>

            <TableRow
                android:paddingTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/adres"
                    android:textSize="14sp"
                    android:minWidth="100sp"
                    android:width="50sp"
                    android:textColor="@color/black87"

                    android:id="@+id/kalender_label_adres"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="Adres"



                    android:layout_weight="1"
                    android:ellipsize="none"
                    android:maxLines="100"
                    android:scrollHorizontally="false"

                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_adres"/>
            </TableRow>

            <TableRow
                android:paddingTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/email"
                    android:textSize="14sp"
                    android:minWidth="100sp"
                    android:width="50sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_label_email"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="Email"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_email"/>
            </TableRow>

            <TableRow android:id="@+id/kalender_telefoonnummer1_row"
                android:paddingTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/telefoonnummer"
                    android:textSize="14sp"
                    android:minWidth="100sp"
                    android:width="50sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_label_telefoonnummer1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="Telefoonnummer 1"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_telefoonnummer1"/>
            </TableRow>

            <TableRow android:id="@+id/kalender_telefoonnummer2_row"
                android:paddingTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="@string/telefoonnummer"
                    android:textSize="14sp"
                    android:minWidth="100sp"
                    android:width="50sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_label_telefoonnummer2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:text="Telefoonnummer 2"
                    android:textSize="14sp"
                    android:textColor="@color/black87"
                    android:id="@+id/kalender_telefoonnummer2"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="1dp"
            android:gravity="fill_horizontal"
            android:textColor="@color/black87"
            android:id="@+id/kalender_label_tags"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Computer, Windows 7, Virusscanner, APK/opschonen, Installeren software, Instellingen software, Opstartproblemen/afsluitproblemen/loopt vast PC, Virus verwijderen"
            android:gravity="fill_horizontal"
            android:id="@+id/kalender_tags"
            android:textColor="@color/black87"
            android:layout_marginBottom="14dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginBottom="1dp"
            android:gravity="fill_horizontal"
            android:textColor="@color/black87"
            android:id="@+id/kalender_label_omschrijving"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Omschrijving"
            android:layout_marginBottom="6dp"
            android:textColor="@color/black87"
            android:id="@+id/kalender_description"
            android:gravity="fill_horizontal"/>
    </LinearLayout>
</RelativeLayout>