<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="105sp"
    android:orientation="vertical"
    android:paddingBottom="8sp"
    android:paddingTop="8sp"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    android:gravity="center_vertical"
    android:background="#FFFFFF"
    android:id="@+id/prikbord_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:text="Januari"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="14sp"
            android:textColor="@color/black87"
            android:id="@+id/loon_maand"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:text="@string/aantal_afspraken"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="14sp"
            android:textColor="@color/black87"
            android:id="@+id/loon_aantal_afspraken_label"/>
        <TextView
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:textSize="14sp"
            android:textColor="@color/black87"
            android:id="@+id/loon_aantal_afspraken"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:text="@string/aantal_servicevragen"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="14sp"
            android:textColor="@color/black87"
            android:id="@+id/loon_aantal_servicevragen_label"/>
        <TextView
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:textSize="14sp"
            android:textColor="@color/black87"
            android:id="@+id/loon_aantal_servicevragen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:text="@string/verdiensten"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="14sp"
            android:textColor="@color/black87"
            android:id="@+id/loon_verdiensten_label"/>
        <TextView
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="€300,00"
            android:textSize="14sp"
            android:textColor="@color/black87"
            android:id="@+id/loon_verdiensten"/>
    </LinearLayout>
</LinearLayout>